<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GiveOrTake</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="free_items_title">Free Items</string>
    <string name="offers_title">My Offers</string>
    <string name="profile_title">Profile</string>
    <string name="title_activity_free_item_pager">Free Item</string>

    <!-- Facebook strings and error strings -->
    <string name="facebook_app_id">165759800241065</string>
    <string name="permission_not_granted">Permission not granted.</string>
    <string name="cancelled">Cancelled</string>
    <string name="error">Error</string>
    <string name="login_failure">Login failed.  Please try again.</string>
    <string name="ok">OK</string>
    <string name="no_item_found">No item was found.</string>

    <!-- Free items Strings -->
    <string name="no_free_items_found">No Free Items Found</string>
    <string name="no_free_items_help">Try changing the filter or removing the search term to find
        more items. You can expand your search by choosing a larger distance.
    </string>
    <string name="search_free_items">Search Free Items</string>

    <!-- Offers strings -->
    <string name="no_offers_yet">You haven\'t created any offers yet</string>
    <string name="give_away_an_item">Give Something Away</string>
    <string name="items_delete_failed">Failed to delete any items.  Try again later.</string>
    <string name="items_some_delete_failed">Failed to delete some of the selected items.</string>
    <string name="delete">Delete Item</string>

    <!-- Item detail strings -->
    <string name="posted_by">Posted By:</string>
    <string name="status">Status:</string>
    <string name="distance_with_colon">Distance:</string>
    <string name="updated">Updated:</string>
    <string name="posted">Posted:</string>
    <string name="i_want_this">I want this!</string>
    <string name="cannot_send_message">Cannot Send Message</string>
    <string name="success">Success</string>
    <string name="will_be_notified">We will email you when this item becomes available.</string>
    <string name="you_own_item">You are the owner of this item!</string>
    <string name="already_signed_up">You\'ve already requested to be notified about this item.
    </string>
    <string name="fetch_image_error">There was an error fetching this image.</string>

    <!-- Message sending strings -->
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="send_a_message">Send a Message</string>
    <string name="to">To:</string>
    <string name="reply_to">Reply-To:</string>
    <string name="subject">Subject:</string>
    <string name="message_hint">        Compose a message to the owner of this item.
        Ask a question about the item or inquire if it\'s still available.
        Your email address will be shared with the recipient of this message.</string>
    <string name="message_sent_error">Failed to send message.</string>
    <string name="message_sent">Message sent!</string>

    <!-- Descriptive distance strings -->
    <string name="less_than_1_mile">Less than 1 mile</string>
    <string name="distance_format">%1$d miles</string>

    <!-- Descriptive time strings -->
    <string name="less_than_1_minute">Less than 1 minute ago</string>
    <string name="a_minute_ago">1 minute ago</string>
    <string name="minutes_ago_format">%1$d minutes ago</string>
    <string name="an_hour_ago">1 hour ago</string>
    <string name="hours_ago_format">%1$d hours ago</string>
    <string name="a_day_ago">1 day ago</string>
    <string name="days_ago_format">%1$d days ago</string>
    <string name="more_than_month">More than a month ago</string>

    <!-- Edit offer strings -->
    <string name="edit_name_hint">Choose a name for your item.</string>
    <string name="edit_offer_item_state">Item State:</string>
    <string name="change">Change</string>
    <string name="describe_item">Describe your item.</string>
    <string name="add_photo">Add Photo</string>
    <string name="post_offer">Post Offer</string>
    <string name="update_offer">Update Offer</string>
    <string name="edit_offer">Edit Offer</string>
    <string name="new_item">New Item</string>
    <string name="take_photo">Take Photo</string>
    <string name="image_upload_failed">Failed to upload the picture of the item.</string>
    <string name="item_not_saved">Your item has unsaved changes that will be lost if you continue.</string>
    <string name="continue_without_posting">Continue without posting</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="cannot_post_item">Cannot Post Item</string>
    <string name="item_requires_name">You must choose a name for this item.</string>
    <string name="item_requires_image">You must add a photo for this item.</string>
    <string name="karma_increase">Karma Increase!</string>
    <string name="earned_more_karma">You\'ve earned %1$d points of karma!</string>

    <!-- General error strings -->
    <string name="error_try_again">Something went wrong.  Please try again.</string>

    <!-- Profile Strings -->
    <string name="account">Account</string>
    <string name="location">Location</string>
    <string name="karma">Karma</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="more_information">More Information</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="my_location">My Location</string>
    <string name="maps_api_key">AIzaSyCubyA4jGRyFP_-BUCTY0QCdwz60yw2GLk</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="legal_notices">Legal Notices</string>

    <!-- Update username strings -->
    <string name="update_username">Update Username</string>
    <string name="username_update_hint">Please choose a unique username. This name is how you will
        appear to other users.
    </string>
    <string name="update">Update</string>
    <string name="error_username_too_short">Username must be at least 6 characters.</string>

    <!-- Update email strings -->
    <string name="email_update_hint">Please enter the email address you would like to use. If you
        change your email, we\'ll send an email to this address to verify that it\'s yours.
    </string>
    <string name="code_send_hint">An email has been sent to the new address with a 4-digit code.
        Please enter it below to update your email address.
    </string>
    <string name="send_code">Send Code</string>
    <string name="error_code_four_digits">The code must be 4-digits.</string>
    <string name="update_email">Update Email</string>
    <string name="cancel_email_update">Cancel Email Change</string>

    <!-- Update location strings -->
    <string name="update_location">Update Location</string>
    <string name="update_location_hint">Drop a pin to choose a location. Other users will see this
        location, so you may want to choose an approximate location.
    </string>
    <string name="center_map">Center Map on Current Location</string>
    <string name="error_no_location">Please choose a location by dropping a pin on the map.</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="refresh">Refresh</string>

    <!-- Filter items strings -->
    <string name="search">Search</string>
    <string name="distance">Distance</string>
    <string name="number_of_miles">%1$d Miles</string>
    <string name="show_my_items">Show My Items</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="filter_items">Filter Items</string>

    <!-- welcome strings -->
    <string name="welcome">Welcome</string>
    <string name="welcome_to_app">Welcome to Give or Take!</string>
    <string name="app_mission">We help people give away items they no longer want -- and find free
        items they need!
    </string>
    <string name="give">Give</string>
    <string name="give_details">Quickly and easily post offers of items you\'d like to give away for
        free. Interested takers will email you and arrange to take your items.
    </string>
    <string name="take">Take</string>
    <string name="take_details">Find free things you need. Send messages to the giver to find out
        more details or arrange to pick up the item.
    </string>
    <string name="lets_get_started">Let\'s Get Started!</string>
    <string name="get_started_details">We\'ll need to know just a few things about you before we can
        start. Thank you for joining Give or Take!
    </string>
    <string name="get_started">Get Started</string>

    <!-- Strings for sharing -->
    <string name="share">Share</string>
    <string name="how_share">How do you want to share?</string>
    <string name="giving_away_on_got">I\'m giving this item away on Give or Take!</string>
    <string name="error_must_set_email">You must set your email address.</string>

</resources>
