<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="5dp"
              android:paddingLeft="2dp"
              android:textStyle="bold"
              android:text="@string/account" />

    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="0,1"
                 android:layout_marginLeft="5dp">

        <TableRow android:background="@android:drawable/list_selector_background">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/username"
                      android:textStyle="bold"
                      android:paddingRight="5dp"
                    />
            <TextView android:id="@+id/profile_username"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />

        </TableRow>
        <TableRow android:background="@android:drawable/list_selector_background">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/email"
                      android:textStyle="bold"
                      android:paddingRight="5dp"
                    />
            <TextView android:id="@+id/profile_email"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                    />


        </TableRow>

    </TableLayout>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:paddingLeft="2dp"
              android:textStyle="bold"
              android:text="@string/location" />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:paddingLeft="2dp"
              android:textStyle="bold"
              android:text="@string/karma" />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:paddingLeft="2dp"
              android:textStyle="bold"
              android:text="@string/lougout" />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:paddingLeft="2dp"
              android:textStyle="bold"
              android:text="@string/more_information" />



</LinearLayout>