<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="5dp"
              android:text="@string/update_location_hint" />

    <Button android:id="@+id/center_on_current_location"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/center_map" />

    <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="5dp"/>

    <Button android:id="@+id/update_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/update_location" />

</LinearLayout>