<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView android:id="@+id/free_item_detail_image"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

    <TextView android:id="@+id/free_item_detail_desc"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="2dp"/>

    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="0,1"
                 android:padding="2dp">

        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/posted_by" />
            <TextView android:id="@+id/free_item_detail_username"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />
            <LinearLayout android:orientation="horizontal">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/karma"
                           android:paddingRight="5dp"/>
                <TextView android:id="@+id/free_item_detail_karma"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content" />
            </LinearLayout>
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/status" />
            <LinearLayout android:orientation="horizontal">
                <ImageView android:id="@+id/free_item_detail_status_icon"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:paddingRight="5dp"/>
                <TextView android:id="@+id/free_item_detail_status_text"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content" />
            </LinearLayout>
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/distance" />
            <TextView android:id="@+id/free_item_detail_distance"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/updated" />
            <TextView android:id="@+id/free_item_detail_date_updated"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/posted" />
            <TextView android:id="@+id/free_item_detail_date_created"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

    <Button android:id="@+id/free_item_detail_want_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/i_want_this"/>



</LinearLayout>