<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:id="@+id/update_email_task_desc"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="5dp"
              android:text="@string/email_update_hint" />

    <EditText android:id="@+id/update_email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textEmailAddress"
              android:padding="5dp" />

    <TextView android:id="@+id/error_message"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="5dp"
              android:textColor="@color/red"
              android:visibility="gone" />

    <EditText android:id="@+id/email_code"
              android:layout_width="100dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:visibility="gone"
              android:inputType="number"
              android:maxLength="4"/>

    <Button android:id="@+id/update_email_action_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@color/darkPink"
            android:text="@string/update_email" />

    <Button android:id="@+id/send_code_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/send_code"
            android:textColor="@color/white"
            android:background="@color/darkPink"
            android:visibility="gone" />

    <Button android:id="@+id/cancel_email_change"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel_email_update"
            android:visibility="gone"/>


</LinearLayout>