<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <EditText android:id="@+id/edit_offer_name"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/edit_name_hint"
                  android:padding="5dp" />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:padding="5dp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:text="@string/edit_offer_item_state"
                      android:layout_weight="1" />

            <Spinner android:id="@+id/item_state_spinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"/>

            <Spinner android:id="@+id/state_user"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:visibility="invisible"
                    />


        </LinearLayout>

        <EditText android:id="@+id/edit_offer_description"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="top|left"
                  android:hint="@string/describe_item"
                  android:padding="5dp"
                  android:lines="5" />

        <Button android:id="@+id/edit_offer_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:drawablePadding="5dp"
                android:drawableLeft="@android:drawable/ic_menu_camera"
                android:text="@string/add_photo" />

        <ImageView android:id="@+id/edit_offer_photo"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center" />

        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">
            <Button android:id="@+id/edit_offer_post_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:background="@color/darkPink"
                    android:text="@string/post_offer" />
            <ProgressBar android:id="@+id/post_progress_bar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignTop="@id/edit_offer_post_button"
                         android:layout_centerInParent="true"
                         android:visibility="invisible"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>